# Hands-On-Point-Cloud-Processing

./: README.md
Homework1/: cloud_lesson.yml
Homework1/YuF_KIT-第1章作业/: README.txt  environment.yml  pca_normal.py  voxel_filter.py
Homework1/lesson one/: depth_complement.docx  depth_complement.py  homework1.docx  off_to_ply.py  pca_normal.py  points_to_ply.py  voxel_filter.py
Homework1/lesson one/Homework1_cpp/: CMakeLists.txt  main.cpp
Homework2/hw2/: CMakeLists.txt  README  benchmark.cpp  benchmark.py  comparision.txt  result_cpp.txt  result_py.txt
Homework2/lesson2/: benchmark.py  kdtree.py  octree.py
Homework3/hw3/: CMakeLists.txt  README.txt  main.cpp  spectralClustering.cpp
Homework3/hw3/data/: aniso.txt  blobs.txt  circle.txt  moons.txt  varied.txt
Homework3/hw3/include/: spectralClustering.hpp
Homework3/hw3/result/: predict_aniso.txt  predict_blobs.txt  predict_circle.txt  predict_moons.txt  predict_varied.txt
Homework3/hw3/sript/: GMM.py  KMeans.py  compare_cluster.py  my_spectral_clustering.py
Homework3/nano_vs_my/: CMakeLists.txt  main.cpp
Homework3/nano_vs_my/include/: kdtree.hpp  resultSet.hpp
Homework3/nano_vs_my/sript/: GMM.py  KMeans.py  compare_cluster.py
Homework4/: README.txt  foreground_clustering_DBSCAN.py  foreground_clustering_range.py  ground_detection_SVD.py  ground_detection_ransac.py
Homework4/result/: Ground detection test on.docx
Homework5/: pointnet_report.docx
Homework5/pytorch_tutorials/: pytorch_tensor.py
Homework6/: result.docx
Homework6/final_result/: overall_results  stats_car_detection.txt  stats_car_detection_3d.txt  stats_car_detection_ground.txt  stats_car_orientation.txt
Homework7/: README
Homework7/hw7/: CMakeLists.txt  main.cpp
Homework7/hw7/include/: iss_detector.hpp
Homework7/hw7/src/: iss_detector.cpp
Homework7/hw7/test_data/: airplane_0001.ply  bench_0002.ply  chair_0001.ply  guitar_0001.ply
Homework8/hw8/: pcl_wrapper_test.py  report.docx  table_0020.ply  table_0038.ply
Homework9/: registration_dataset.txt
Homework9/hw9/: CMakeLists.txt  README  main.cpp  my_reg_result_v0.txt  my_reg_result_v1.txt  my_reg_result_v2.txt  test.cpp
Homework9/hw9/include/: registration.hpp
Homework9/hw9/src/: registration.cpp
HomeworkFinal/: README  README.md  foreground_obj_cls.py  test_cls.py  train_cls.py
HomeworkFinal/data_utils/: DataLoader.py
HomeworkFinal/dataset_building/: dataset_analysis.py  dataset_build.py  ground_detection_SVD.py
HomeworkFinal/dataset_info/: mykitti_cls_names.txt  mykitti_test.txt  mykitti_train.txt
(+3685 files in other folders)
